[gd_scene load_steps=14 format=2]

[ext_resource path="res://ressources/menus/buttons/quitterPressed.png" type="Texture" id=1]
[ext_resource path="res://scenes/menus/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://ressources/menus/Banner.PNG" type="Texture" id=3]
[ext_resource path="res://ressources/menus/buttons/jouerPressed.png" type="Texture" id=4]
[ext_resource path="res://ressources/menus/buttons/jouer.png" type="Texture" id=5]
[ext_resource path="res://ressources/menus/buttons/jouerSelect.png" type="Texture" id=6]
[ext_resource path="res://ressources/menus/bg.PNG" type="Texture" id=7]
[ext_resource path="res://ressources/menus/buttons/parametresSelect.png" type="Texture" id=8]
[ext_resource path="res://ressources/menus/buttons/parametresPressed.png" type="Texture" id=9]
[ext_resource path="res://ressources/menus/buttons/parametres.png" type="Texture" id=10]
[ext_resource path="res://ressources/menus/buttons/quitterSelect.png" type="Texture" id=11]
[ext_resource path="res://ressources/menus/buttons/quitter.png" type="Texture" id=12]
[ext_resource path="res://ressources/persos/Champion/atkneutral/neu1.png" type="Texture" id=13]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="Logo gros" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 54.0
margin_bottom = 50.0

[node name="Jouer" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Parametres")
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Parametres" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 4.0
margin_bottom = 4.0
focus_neighbour_top = NodePath("../../HBoxContainer/Jouer")
focus_neighbour_bottom = NodePath("../../HBoxContainer3/Quitter")
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Quitter" type="TextureButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 8.0
margin_bottom = 8.0
focus_neighbour_top = NodePath("../../HBoxContainer2/Parametres")
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/Jouer" to="." method="_on_Jouer_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/Parametres" to="." method="_on_Parametres_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer/Quitter" to="." method="_on_Quitter_pressed"]
